--- a/index.html
+++ b/index.html
@@ -4,40 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manual de Hacking</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="1.css">
+
     <style>
-        body {
-            background-color: #121212;
-            color: #e0e0e0;
-        }
-        .container {
-            margin-top: 30px;
-        }
-        pre, code {
-            background-color: #1e1e1e;
-            color: #e0e0e0;
-            padding: 10px;
-            border-radius: 5px;
-        }
-        .section-title {
-            margin-top: 20px;
-            margin-bottom: 10px;
-            font-weight: bold;
-        }
-        iframe {
-            width: 100%;
-            height: 400px;
-            background-color: white;
-            border: none;
-            margin-top: 20px;
-        }
-        .card-body {
-            background-color: #1e1e1e;
-            color: #e0e0e0;
-        }
-        .search-bar {
-            margin-bottom: 20px;
-        }
+   
     </style>
 </head>
 <body>
@@ -46,7 +17,7 @@
 
         <!-- Buscador -->
         <div class="search-bar">
-            <input type="text" id="searchInput" class="form-control" placeholder="Buscar comando..." onkeyup="filterCommands()">
+            <input type="text" id="searchInput" class="form-control" placeholder="Buscar comando..." onkeyup="filtro()">
         </div>
 
         <div id="content"></div>
@@ -59,77 +30,10 @@
         </div>
     </div>
 
-    <script>
-        async function loadCommands() {
-            const response = await fetch('1.json'); // Asegúrate que '1.json' esté correctamente ubicado en tu servidor
-            const data = await response.json();
-            const contentDiv = document.getElementById('content');
 
-            // Limpiar contenido actual
-            contentDiv.innerHTML = '';
+        <!-- scripts js de logica y boot -->
+        <script src="1.js"></script>
 
-            for (const [phase, commands] of Object.entries(data)) {
-                // Crear una tarjeta para cada fase
-                const card = document.createElement('div');
-                card.classList.add('card', 'mb-3');
-
-                // Encabezado de la tarjeta
-                const cardHeader = document.createElement('div');
-                cardHeader.classList.add('card-header');
-                cardHeader.innerHTML = `<strong style="color: red;">${phase}</strong>`;
-                card.appendChild(cardHeader);
-
-                // Cuerpo de la tarjeta
-                const cardBody = document.createElement('div');
-                cardBody.classList.add('card-body');
-
-                // Agregar comandos de esa fase
-                commands.forEach(cmd => {
-                    const commandTitle = document.createElement('h5');
-                    commandTitle.innerHTML = `<strong>${cmd.title}</strong>`;
-                    const commandCode = document.createElement('pre');
-                    commandCode.textContent = cmd.command;
-                    const commandDesc = document.createElement('p');
-                    commandDesc.textContent = cmd.description;
-
-                    cardBody.appendChild(commandTitle);
-                    cardBody.appendChild(commandCode);
-                    cardBody.appendChild(commandDesc);
-                });
-
-                card.appendChild(cardBody);
-                contentDiv.appendChild(card);
-            }
-        }
-
-        // Filtro de búsqueda
-        function filterCommands() {
-            const searchValue = document.getElementById('searchInput').value.toLowerCase();
-            const cards = document.querySelectorAll('.card');
-
-            cards.forEach(card => {
-                const title = card.querySelector('.card-header').textContent.toLowerCase();
-                const commands = card.querySelectorAll('h5, pre, p');
-                let isMatch = title.includes(searchValue);
-
-                commands.forEach(command => {
-                    if (command.textContent.toLowerCase().includes(searchValue)) {
-                        isMatch = true;
-                    }
-                });
-
-                if (isMatch) {
-                    card.style.display = 'block';
-                } else {
-                    card.style.display = 'none';
-                }
-            });
-        }
-
-        loadCommands();
-    </script>
-
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="bootstrap.bundle.min.js"></script>
 </body>
 </html>
