--- a/index.html
+++ b/index.html
@@ -7,15 +7,12 @@
     <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="1.css">
 
-    <style>
    
-    </style>
 </head>
 <body>
     <div class="container">
         <h1 class="text-center">Manual de Hacking</h1>
 
-        <!-- Buscador -->
         <div class="search-bar">
             <input type="text" id="searchInput" class="form-control" placeholder="Buscar comando..." onkeyup="filtro()">
         </div>
@@ -30,10 +27,12 @@
         </div>
     </div>
 
+    <div class="ajg">
+         alfrejimglez
+    </div>
 
-        <!-- scripts js de logica y boot -->
-        <script src="1.js"></script>
-
+    <!-- Scripts js de lógica y bootstrap -->
+    <script src="1.js"></script>
     <script src="bootstrap.bundle.min.js"></script>
 </body>
 </html>
