--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 
 
     <div class="ajg">
-         alfrejimglez
+         ajg
     </div>
 <footer class="bg-dark text-white mt-5 p-4 text-center rounded-top">
     <div class="container">
-        <p class="mb-1">📘 Manual de Hacking - Creado por <strong>alfrejimglez</strong></p>
+        <p class="mb-1">📘 Manual de Hacking - Creado por <strong>ajg</strong></p>
         <p class="mb-0">Contenido con fines educativos. Usa el conocimiento con responsabilidad 🧠</p>
         <small class="d-block mt-2">&copy; 2025 - Todos los derechos reservados</small>
     </div>
